<resources>
    <string name="app_name">TES</string>

    <string name="bienvenido_a_tes">¡Bienvenido a TES!</string>
    <string name="correo_el_ctronico">Correo eléctronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="scrollview">ScrollView</string>
    <string name="tel_fono">Teléfono</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="especialidad">Especialidad</string>
    <string name="rol_del_usuario">Rol del usuario</string>
    <string name="qu_tipo_de_usuario_ser">¿Qué tipo de usuario será?</string>
    <string name="cliente">Cliente</string>
    <string name="talachero">Talachero</string>
    <string name="propuesta_del_contrato">Propuesta del contrato</string>
    <string name="rechazar">Rechazar</string>
    <string name="aceptar">Aceptar</string>
    <string name="trabajo_por_hacer">Trabajo por hacer:</string>
    <string name="nombre_text">Nombre:</string>
    <string name="fecha">Fecha:</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="monto">Monto</string>
    <string name="ver_contratos">Ver contratos</string>
    <string name="abrir_mensajer_a">Abrir Mensajería</string>


    <string name="direcci_n">Dirección</string> <!--Cambiar-->
    <string name="email">example@example.com</string><!--Cambiar-->
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>
    <string name="_100_talachos_disponibles">100 Talachos disponibles</string>
    <string name="nombre_contrato_pendiente">Salvador Morado Quiroz</string>
    <string name="reparacion">Tubería rota</string>
    <string name="date_contrato_pendiente">16 - 09 - 21</string>
    <string name="precio_contrato_pendiente">$350.00 Aprox.</string>
    <string name="direcci_n_talachero">Dirección:</string>
    <string name="calificaci_n_talachero">Calificación:</string>
    <string name="seleccione_sus_oficios">Seleccione sus oficios</string>
    <string name="escriba_el_oficio">Escriba el oficio</string>
    <string name="salir">Salir</string>
    <string name="cerrajer_a">Cerrajería</string>
    <string name="electricista">Electricista</string>
    <string name="fontaner_a">Fontanería</string>
    <string name="herrer_a">Herrería</string>
    <string name="m_canica_automotriz">Mécanica automotriz</string>
    <string name="plomer_a">Plomería</string>
    <string name="servicio_de_mudanza">Servicio de mudanza</string>
    <string name="otro">Otro</string>
    <string name="alba_iler_a">Albañilería</string>
    <string name="carpinter_a">Carpintería</string>
    <string name="pintor">Pintor</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="para_recuperar_tu_contrase_a_ingresa_el_correo_electr_nico_con_el_que_te_registraste_y_da_clic_en_enviar">Para recuperar tu contraseña ingresa el correo electrónico con el que te registraste y da clic en enviar.</string>
    <string name="recuperar_informaci_n">Recuperar información</string>
    <string name="actualizar">Actualizar</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="trabajo_realizado">Trabajo realizado:</string>
    <string name="contratos_pendientes">Contratos rechazados</string>
    <string name="contratos_sin_aceptar">Contratos sin aceptar</string>
    <string name="antonio_pulido">Antonio Pulido</string>
    <string name="string_vista">Vista</string>
    <string name="dinero_inicial">$0.0</string>
    <string name="cero">0</string>
    <string name="contratos_finalizados">Contratos finalizados</string>
    <string name="contratos_inconclusos">Contratos inconclusos</string>
    <string name="contratos">Contratos:</string>
    <string name="conversaciones_iniciadas_0">Conversaciones iniciadas: 0</string>
    <string name="contratos_aceptados_0">Contratos aceptados: 0</string>
    <string name="tasa_de_contratos_finalizados_0">Tasa de contratos finalizados: 0%</string>
    <string name="ingresos">Ingresos:</string>
    <string name="ingresos_totales_0_0">Ingresos totales: $0.0</string>
    <string name="comisi_n_de_tes_0_0">Comisión de TES: $0.0</string>
    <string name="ganancias_totales_0_0">Ganancias totales: $0.0</string>
    <string name="deuda_por_comisiones">Deuda por comisiones:</string>
    <string name="tasa_de_contratos_aceptados_0">Tasa de contratos aceptados: 0%</string>
    <string name="contratos_sin_finalizar">Contratos sin finalizar</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="nuevo_mensaje">Nuevo mensaje</string>
    <string name="aceptar_contrato">Aceptar contrato</string>
    <string name="actualizar_informaci_n">Actualizar información</string>
    <string name="descriptionImageF">Fonde de pantalla login</string>
    <string name="logo_de_tes">Logo de TES</string>
    <string name="resgistrarse">Resgistrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="usar_cuenta_social_para_iniciar_sesi_n">Usar cuenta social para iniciar sesión</string>
    <string name="registro_como_cliente">Registro como Cliente</string>
    <string name="apellido">Apellido</string>
    <string name="logo">Logo</string>
    <string name="opciones">Opciones</string>
    <string name="placeholder">Pintores</string>
    <string name="categoria_name">Nombre</string>
    <string name="telefono_categoria">Teléfono</string>
    <string name="servicios">Servicios</string>
    <string name="buscar">Buscar</string>
    <string name="usuario">Usuario</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="correo">Correo</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="direccion_opc">Dirección</string>
    <string name="contratos_opc">Contratos</string>
    <string name="mensajer_a">Mensajería</string>
    <string name="cerrar_sesi_n_opc">Cerrar Sesión</string>
    <string name="_4_00pm">4:00pm</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="confirmar">Confirmar</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="mensaje">Mensaje</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="prestador_de_servicio">Prestador de servicio:</string>
    <string name="prestador_de_servicios">Prestador de servicio:</string>
    <string name="descripci_n_del_arreglo">Descripción del arreglo</string>
    <string name="monto_a_cobrar">Monto a cobrar</string>
    <string name="descripci_n_del_problema">Descripción del problema</string>
    <string name="_350_00">$ 350.00</string>
    <string name="tuber_a_rota">Tubería rota</string>
</resources>