<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/principal_yellow">

        <TextView
            android:id="@+id/textViewNombreOpc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/propuesta_del_contrato"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_propuesta_accept_contract2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/descripci_n_del_problema"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_propuestaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/antonio_pulido"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_propuestaProblema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tuber_a_rota"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_propuestaPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/_350_00"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton_rechzarPropuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.50"
            android:backgroundTint="@color/principal_yellow"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/rechazar"
            app:cornerRadius="10dp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton_aceptarPropuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.50"
            android:backgroundTint="@color/principal_yellow"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/aceptar"
            app:cornerRadius="10dp">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</LinearLayout>