<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewContactoMensajeria"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/usuario" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUsuarioMensajeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/usuario"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewMensajeMensajeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/nuevo_mensaje"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewHoraMensajeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.4"
            android:fontFamily="@font/roboto"
            android:text="@string/_4_00pm"
            android:textAlignment="viewEnd" />

    </LinearLayout>
</androidx.cardview.widget.CardView>