<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/principal_yellow"
            android:padding="10dp"
            android:text="@string/nuevo_mensaje"
            android:textColor="@color/black"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_Fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fecha"
            android:textSize="12sp"></TextView>

        <ImageView
            android:id="@+id/imageView_Entregado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_entregado"
            android:visibility="gone">

        </ImageView>

        <ImageView
            android:id="@+id/imageView_Visto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_visto"
            android:visibility="gone">

        </ImageView>

    </LinearLayout>
</LinearLayout>