<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewTalachero"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewTalachero"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/categoria" />

        <TextView
            android:id="@+id/textViewNombreCardCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/categoria_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewTelefonoCardCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/telefono_categoria"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewEspecilidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/telefono_categoria"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>