<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView_Fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionImageF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/herramientas" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_Fondo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView_LogoTES"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/logo"
                tools:ignore="ImageContrastCheck"
                app:srcCompat="@drawable/logo_tes"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager_Contracts"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout_Contracts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    app:tabIndicatorColor="@color/white"
                    app:tabMode="fixed"
                    app:tabPaddingEnd="12dp"
                    app:tabPaddingStart="12dp"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextAppearance="@style/TextAppearance.App.Label"
                    app:tabTextColor="@color/gray">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iniciar_sesi_n" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resgistrarse" />

                </com.google.android.material.tabs.TabLayout>

            </androidx.viewpager.widget.ViewPager>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>